update styles.css and index.html

--- a/index.html
+++ b/index.html
@@ -96,6 +96,43 @@
                 personalizado, ¡contáctame!</p>
         </section>
 
+        <section id="personality">
+            <div class="scroll" style="--time:60s">
+                <div>
+                    <span>Creativo</span>
+                    <span>Orientado al detalle</span>
+                    <span>Colaborador</span>
+                    <span>Resolutivo</span>
+                    <span>Aprendiendo constantemente</span>
+                    <span>Apasionado por tecnología</span>
+                    <span>Comunicación efectiva</span>
+                    <span>Comprometido con calidad</span>
+                    <span>Experiencia de usuario</span>
+                    <span>Adaptable a tecnologías</span>
+                    <span>Aprendo rápido</span>
+                    <span>Pasión inmensa</span>
+                    <span>Inteligente</span>
+                    <span>Me gustan retos</span>
+                </div>
+                <div>
+                    <span>Creativo</span>
+                    <span>Orientado al detalle</span>
+                    <span>Colaborador</span>
+                    <span>Resolutivo</span>
+                    <span>Aprendiendo constantemente</span>
+                    <span>Apasionado por tecnología</span>
+                    <span>Comunicación efectiva</span>
+                    <span>Comprometido con calidad</span>
+                    <span>Experiencia de usuario</span>
+                    <span>Adaptable a tecnologías</span>
+                    <span>Aprendo rápido</span>
+                    <span>Pasión inmensa</span>
+                    <span>Inteligente</span>
+                    <span>Me gustan retos</span>
+                </div>
+            </div>
+        </section>
+
         <section id="projects">
             <h2 class="section-title">Proyectos</h2>
             <div class="card-container">
