--- a/index.html
+++ b/index.html
@@ -1340,7 +1340,7 @@
 							<p>Desarrollé S3B, una plataforma innovadora que conecta a particulares para ofrecer y contratar servicios entre ellos, con sistema de pagos seguro y gestión de usuarios.</p>
 							<div class="project-links">
 								<a href="https://s3b.es" class="project-link" target="_blank" rel="noopener"><i class="fas fa-external-link-alt"></i> Ver sitio</a>
-								<a href="#" class="project-link"><i class="fas fa-info-circle"></i> Detalles</a>
+								<!-- <a href="#" class="project-link"><i class="fas fa-info-circle"></i> Detalles</a> -->
 							</div>
 						</div>
 					</div>
@@ -1358,7 +1358,7 @@
 							<p>Diseñé y desarrollé la web de La28, una passtelería con tienda online, catálogo de productos, pedidos personalizados y gestión de reservas para eventos.</p>
 							<div class="project-links">
 								<a href="https://la28.labdigital.es/" class="project-link" target="_blank" rel="noopener"><i class="fas fa-external-link-alt"></i> Ver sitio</a>
-								<a href="#" class="project-link"><i class="fas fa-info-circle"></i> Detalles</a>
+								<!-- <a href="#" class="project-link"><i class="fas fa-info-circle"></i> Detalles</a> -->
 							</div>
 						</div>
 					</div>
@@ -1367,7 +1367,7 @@
                             <img src="/placeholder.svg?height=400&width=600" alt="Proyecto Conexia Events" />
                         </div> -->
 						<div class="project-content">
-							<h3>conexiaevents.com</h3>
+							<h3>Conexia Events</h3>
 							<div class="project-tags">
 								<span class="project-tag">Eventos</span>
 								<span class="project-tag">Organización</span>
@@ -1376,7 +1376,7 @@
 							<p>Desarrollé conexiaevents.com, una plataforma para la gestión y organización de eventos, con registro de asistentes, panel de administración y notificaciones automáticas.</p>
 							<div class="project-links">
 								<a href="https://conexiaevents.com" class="project-link" target="_blank" rel="noopener"><i class="fas fa-external-link-alt"></i> Ver sitio</a>
-								<a href="#" class="project-link"><i class="fas fa-info-circle"></i> Detalles</a>
+								<!-- <a href="#" class="project-link"><i class="fas fa-info-circle"></i> Detalles</a> -->
 							</div>
 						</div>
 					</div>
