--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@
 
 			.contact-item {
 				display: flex;
-				align-items: flex-start;
+				align-items: center;
 				gap: 1rem;
 				transition: transform var(--transition-normal) ease;
 			}
